full rewrite for more secure deployment

--- a/templates/nba/wildfly/logback.xml.erb
+++ b/templates/nba/wildfly/logback.xml.erb
@@ -10,7 +10,7 @@
         </appender>
 
         <appender name="FILE" class="ch.qos.logback.core.FileAppender">
-                <file>/var/log/nda.${date}.log</file>
+                <file>/var/log/nba/nba.${date}.log</file>
                 <append>true</append>
                 <encoder>
                         <pattern>%d %5p | %t | %-55logger{55} | %m %n</pattern>
