--- a/templates/howtodeploy.txt.erb
+++ b/templates/howtodeploy.txt.erb
@@ -1,11 +1,12 @@
 To manually deploy a .ear file just overwrite the .ear file to
-/opt/wildfly/wildfly_deployments/<%= scope.lookupvar("nba::nba.ear") %>
+/opt/wildfly/wildfly_deployments/<%= scope.lookupvar("nba::application_name") %>
 
-Please note that the filename SHOULD BE <%= scope.lookupvar("nba::nba.ear") %>
+Please note that the filename SHOULD BE <%= scope.lookupvar("nba::application_name") %>
 
 After copy the .ear will be redeployed. No need to delete the existing .ear
 
 You can check the deployment by checking the content of /opt/wildfly/wildfly_deployments
-* <%= scope.lookupvar("nba::nba.ear") %>.deployed -> ear is deployed
-* <%= scope.lookupvar("nba::nba.ear") %>.isdeploying -> ear is deploying
-* <%= scope.lookupvar("nba::nba.ear") %>.failed -> deployment failed. You can read the <%= scope.lookupvar("nba::nba.ear") %>.failed 
+
+* <%= scope.lookupvar("nba::application_name") %>.deployed -> ear is deployed
+* <%= scope.lookupvar("nba::application_name") %>.isdeploying -> ear is deploying
+* <%= scope.lookupvar("nba::application_name") %>.failed -> deployment failed. You can read the <%= scope.lookupvar("nba::application_name") %>.failed
