--- a/templates/nba/wildfly/logrotate.erb
+++ b/templates/nba/wildfly/logrotate.erb
@@ -1,6 +1,6 @@
 /var/log/wildfly/*log
 /var/log/nba/*log
-/opt/wildfly/standalone/log/*log
+/opt/wildfly/standalone/log/*log*
 {
   daily
   create 0644 wildfly wildfly
