--- a/templates/404.html.erb
+++ b/templates/404.html.erb
@@ -32,6 +32,15 @@
 <body>
   <section>
     <h1>Oopsiedosie! (404)</h1>
-    <p>You did something very wrong and should feel very, very ashamed of yourself.</p>
+
+    <p>
+      The URL you requested is not a valid BioAPI service.
+    </p>
+
+    <p>
+      Please, refer to <a href="http://docs.biodiversitydata.nl" target="_blank">
+        http://docs.biodiversitydata.<WBR>nl
+      </a> for documentation on the BioAPI REST services.
+    </p>
   </section>
 </body>
