--- a/templates/docker/wildfly_nba_Dockerfile.erb
+++ b/templates/docker/wildfly_nba_Dockerfile.erb
@@ -1,5 +1,5 @@
 FROM jboss/wildfly
-MKDIR /etc/nba
+RUN MKDIR /etc/nba
 COPY dwca /etc/dwca
 ADD nba.properties /etc/nba/
 ADD nba.war /opt/jboss/wildfly/standalone/deployments/
